# imaginarium

./: .gitignore  README.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/engine/: README.md  Table.py  __init__.py  build_dataset.py  constants.py  db.py  extract_features.py  main.py  train_knn.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
